Fix overflow property

--- a/styles.css
+++ b/styles.css
@@ -156,7 +156,7 @@ a {
     font-size: 1.6rem;
     height: 180px;
     justify-content:flex-start;
-    overflow: hidden;
+    overflow: auto;
 }
 
 .duration {
@@ -181,7 +181,7 @@ a {
     background-color: black;
     padding-top: 5px;
     padding-bottom: 5px;
-    overflow: hidden;
+    overflow: auto;
 }
 
 .counter {
@@ -207,7 +207,7 @@ a {
     display: flex;
     padding: 12px 6px;
     font-size: 1.3rem;
-    overflow: hidden;
+    overflow: auto;
     align-items: center;
 }
 
